Bug 97061 - [drm:intel_dsi_post_disable [i915]] *ERROR* DSI LP not going Low
Summary: [drm:intel_dsi_post_disable [i915]] *ERROR* DSI LP not going Low
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-23 18:34 UTC by Bastien Nocera
Modified: 2017-02-28 14:44 UTC (History)
1 user (show)

See Also:
i915 platform: BSW/CHT
i915 features: display/backlight


Attachments
surface3-resume-hang.txt (316.18 KB, text/plain)
2016-07-23 18:34 UTC, Bastien Nocera
no flags Details

Description Bastien Nocera 2016-07-23 18:34:05 UTC
Created attachment 125280 [details]
surface3-resume-hang.txt

On a Surface 3 machine, with the current Linus tree with no Intel related patches:
https://github.com/hadess/fedora-surface3-kernel/commits/master

I get when trying to suspend:
Jul 23 20:12:13 surface kernel: [drm:intel_dsi_post_disable [i915]] *ERROR* DSI LP not going Low

Full logs attached

Kernel: 4.7.0-0.rc7.git4.5.surface3.fc25.x86_64
xorg Intel driver: xf86-video-intel-20160712

After resuming, I'm not able to change the backlight.
Comment 1 Bastien Nocera 2016-07-25 12:21:44 UTC
The backlight problem was caused by something else. The ERROR persists.
Comment 2 Hans de Goede 2017-02-27 10:23:11 UTC
Hi,

I've just fixed the same "*ERROR* DSI LP not going Low" error on another device, chances are the fix will fix this for the Surface 3 too:

https://github.com/jwrdegoede/linux-sunxi/commit/e77557df84030a456d7bcf9ceddfbc80b7817a08

(also just submitted upstream to intel-gfx@lists.freedesktop.org)

Regards,

Hans
Comment 3 Bastien Nocera 2017-02-28 09:53:09 UTC
Seems to work though I ran into another problem, see https://bugs.freedesktop.org/show_bug.cgi?id=99991
Comment 4 Jani Nikula 2017-02-28 14:44:32 UTC
commit 1e08a260b178a6cb5547a28153f88661970474e5
Author: Hans de Goede <hdegoede@redhat.com>
Date:   Tue Feb 28 11:26:21 2017 +0200

    drm/i915/dsi: VLV/CHT Only wait for LP00 on MIPI PORT A


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.